reduce cadvisor cpu usage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,9 @@ services:
       - /var/run:/var/run:rw
       - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
+    command:
+      - '-housekeeping_interval=10s'
+      - '-docker_only=true'
     networks:
       monitor-network:
         aliases:
