--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3.8'
 
 services:
   node_exporter:
-    image: prom/node-exporter
+    image: prom/node-exporter:latest
     expose:
       - 9100
-    restart: always
+    restart: unless-stopped
     command:
       - "--path.rootfs=/host"
     volumes:
@@ -35,13 +35,13 @@ services:
           - cadvisor
 
   prometheus:
-    image: prom/prometheus
+    image: prom/prometheus:latest
     expose:
       - 9090
-    restart: always
+    restart: unless-stopped
     volumes:
         - "./prometheus.yml:/etc/prometheus/prometheus.yml"
-        - "prometheus-storage:/prometheus"
+        - prometheus-storage:/prometheus
     command:
       - '--storage.tsdb.retention.time=30d'
       - '--storage.tsdb.retention.size=5GB'
@@ -54,18 +54,49 @@ services:
         aliases:
           - prometheus
 
+  loki:
+    image: grafana/loki:latest
+    restart: unless-stopped
+    expose:
+      - 3100
+    volumes:
+      - loki-storage:/loki
+    networks:
+      monitor-network:
+        aliases:
+          - loki
+
+  promtail:
+    image: grafana/promtail
+    restart: unless-stopped
+    volumes:
+      - ./promtail.yml:/etc/promtail/config.yml
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/lib/docker/containers:/var/lib/docker/containers
+    networks:
+      monitor-network:
+        aliases:
+          - promtail
+
   grafana:
-    image: grafana/grafana
+    image: grafana/grafana:latest
+    restart: unless-stopped
     ports:
       - "3000:3000"
-    volumes:
-        - "grafana-storage:/var/lib/grafana"
     networks:
       monitor-network:
         aliases:
           - grafana
+    volumes:
+      - grafana-storage:/var/lib/grafana
     
 # Network
 networks:
   monitor-network:
     driver: bridge
+
+# Volumes
+volumes:
+  prometheus-storage:
+  grafana-storage:
+  loki-storage:
