--- a/promtail.yml
+++ b/promtail.yml
@@ -15,21 +15,16 @@ scrape_configs:
         target_label: 'container'
       - source_labels: ['__meta_docker_container_log_stream']
         target_label: 'logstream'
-      - source_labels: ['__meta_docker_container_name']
-        regex: '/(.*)'
-        target_label: 'pod'
-      - source_labels: ['__meta_docker_container_log_stream']
-        target_label: 'stream'
     pipeline_stages:
       - drop:
           source: 'container'
-          expression: '((.*)-)*loki((-.*))*'
+          expression: '(.*)-loki-(.*)'
       - drop:
           source: 'container'
-          expression: '((.*)-)*promtail((-.*))*'
+          expression: '(.*)-promtail-(.*)'
       - drop:
           source: 'container'
-          expression: '((.*)-)*grafana((-.*))*'
+          expression: '(.*)-grafana-(.*)'
       - drop:
           older_than: 24h
       - static_labels:
