--- a/prometheus.yml
+++ b/prometheus.yml
@@ -7,10 +7,28 @@ scrape_configs:
   - job_name: 'node_exporter'
     static_configs:
       - targets: ['node_exporter:9100']
+    basic_auth:
+      username: 'prometheus'
+      password: 'your_password'
+    relabel_configs:
+      - source_labels: [__address__]
+        regex: '([^:]+)(:\d+)?'
+        target_label: nodename
+        replacement: '$1'
+
   # Monitor docker container
   - job_name: 'cadvisor'
     static_configs:
       - targets: ['cadvisor:8080']
+    basic_auth:
+      username: 'prometheus'
+      password: 'your_password'
+    relabel_configs:
+      - source_labels: [__address__]
+        regex: '([^:]+)(:\d+)?'
+        target_label: nodename
+        replacement: '$1'
+
   # Monitor itself
   - job_name: 'prometheus'
     static_configs:
